--- a/dieselPM_TSSTcort_pub.Rmd
+++ b/dieselPM_TSSTcort_pub.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "dieselPM_TSSTcort_CDI"
-author: "Jessica Uy"
+author: "Jessica Uy and Katy Shin"
 date: '2024-05-20'
 output: html_document
 ---
